# myah-hermes-plugin

./: .gitignore  CHANGELOG.md  README.md  __init__.py  plugin.yaml  pyproject.toml
docs/plans/: 2026-06-01-long-run-dispatch-lifecycle.md
myah_hermes_plugin/: __init__.py  _provider_sync.py  cli.py  cron_approval.py  dispatcher.py  sentry_init.py
myah_hermes_plugin/brand_import/: __init__.py  package_builder.py  public_shopify.py  source_adapters.py  storage.py
myah_hermes_plugin/image_gen/: __init__.py  replicate.py
myah_hermes_plugin/myah_admin/: __init__.py  myah_hook.py  myah_overrides.py
myah_hermes_plugin/myah_admin/dashboard/: __init__.py  _brand.py  _common.py  _cron_jobs.py  _env.py  _providers.py  _proxy.py  _sessions_and_lifecycle.py  _skills_plugins_mcp.py  _soul_and_config.py  _webhooks.py  _wiki.py  _wiki_paths.py  manifest.json  plugin_api.py
myah_hermes_plugin/myah_platform/: __init__.py  _runner_state.py  adapter.py  pre_dispatch_hook.py  runtime_admin.py  standalone_runner.py
myah_hermes_plugin/myah_tools/: __init__.py  cron_tool.py  knowledge_base_tool.py  secrets_tool.py  webhook_tool.py  wiki_tool.py
myah_hermes_plugin/observability/: __init__.py  sentry_hooks.py  smart_approval_audit.py
myah_hermes_plugin/runtime_extensions/: __init__.py  cron_watcher.py  mcp_disconnect.py  streaming_callbacks.py  webhook_metadata.py
tests/: __init__.py  conftest.py  test_action_queues_thread_safety.py  test_active_provider_endpoint.py  test_adapter_chat_active_provider_sync.py  test_adapter_send_cron_path.py  test_adapter_switch_model_failure.py  test_brand_import_pipeline.py  test_build_delivery_metadata.py  test_cli_auth_callback.py  test_cron_approval.py  test_cron_tool.py  test_cron_watcher.py  test_cron_watcher_persistent_state.py  test_cron_watcher_probe.py  test_dashboard_gateway_client.py  test_dashboard_plugin_loads.py  test_directory_style_install.py  test_dispatch_message_defers_cleanup.py  test_dispatcher.py  test_knowledge_base_tool.py  test_mcp_disconnect.py  test_myah_adapter.py  test_myah_adapter_offline_delivery.py  test_myah_admin_config.py  test_myah_admin_cron_jobs.py  test_myah_admin_env.py  test_myah_admin_install.py  test_myah_admin_oauth.py  test_myah_admin_providers.py  test_myah_admin_proxy.py  test_myah_admin_sessions_lifecycle.py  test_myah_admin_sessions_proxy.py  test_myah_admin_skills_list.py  test_myah_admin_skills_plugins_mcp.py  test_myah_admin_soul_and_config.py  test_myah_admin_toolsets.py  test_myah_admin_webhooks.py  test_myah_admin_wiki_import.py  test_myah_allowed_media_roots.py  (+28 more)
tests/integration/: test_dashboard_auth_smoke.py
tests/myah_admin/dashboard/: test_auth_compat.py
